# EClet

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  NEWS  README.md  autogen.sh  configure.ac
doc/: Makefile.am  eclet.texi
hardware/: eclet.brd  eclet.sch
src/cli/: cli_commands.c  cli_commands.h  hash.c  hash.h  main.c
src/driver/: command.c  command.h  config_zone.c  config_zone.h  defs.h  hashlet.h  personalize.c  personalize.h
src/tests/: factory.sh
